--- a/rd_ui/app/index.html
+++ b/rd_ui/app/index.html
@@ -29,7 +29,7 @@
 </head>
 <body>
 <div growl></div>
-<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
     <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse"
@@ -73,7 +73,7 @@
                 </ul>
             </li>
             <li>
-                <a href="/alerts">Alerts</a>
+                <a ng-show="currentUser.hasPermission('create_alert')"  href="/alerts">Alerts</a>
             </li>
             <li ng-show="currentUser.hasPermission('admin')">
                 <a href="/data_sources">Data Sources</a>
@@ -82,7 +82,7 @@
                 <a href="/users">Users</a>
             </li>
         </ul>
-        <form class="navbar-form navbar-left" role="search" ng-submit="searchQueries()">
+        <form class="navbar-form navbar-left" role="search" ng-submit="searchQueries()" ng-show="currentUser.hasPermission('view_query')">
             <div class="form-group">
                 <input type="text" ng-model="term" class="form-control" placeholder="Search queries...">
             </div>
