--- a/rd_ui/app/login.html
+++ b/rd_ui/app/login.html
@@ -74,12 +74,12 @@
 
             <form role="form" method="post" name="login">
                 <div class="form-group">
-                    <label for="inputEmail">Email</label>
+                    <label for="inputEmail">Email: </label>
                     <input type="text" class="form-control" id="inputEmail" name="email" value="{{email}}">
                 </div>
                 <div class="form-group">
                     <!--<a class="pull-right" href="#">Forgot password?</a>-->
-                    <label for="inputPassword">Password</label>
+                    <label for="inputPassword">Password: </label>
                     <input type="password" class="form-control" id="inputPassword" name="password">
                 </div>
                 <div class="checkbox pull-right">
