Import vendor scripts required by leaflet directive

--- a/rd_ui/app/vendor_scripts.html
+++ b/rd_ui/app/vendor_scripts.html
@@ -39,6 +39,9 @@
 <script src="/bower_components/canvg/StackBlur.js"></script>
 <script src="/bower_components/canvg/canvg.js"></script>
 <script src="/bower_components/leaflet/dist/leaflet.js"></script>
+<script src="/bower_components/angular-simple-logger/dist/angular-simple-logger.js"></script>
+<script src="/bower_components/leaflet.markercluster/dist/leaflet.markercluster.js"></script>
+<script src="/bower_components/ui-leaflet/dist/ui-leaflet.min.js"></script>
 <script src="/bower_components/angular-bootstrap-show-errors/src/showErrors.js"></script>
 <script src="/bower_components/d3/d3.js"></script>
 <script src="/bower_components/angular-ui-sortable/sortable.js"></script>
